Refactors some code to improve Java compliance.